--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.616.0",
+    "@aws-sdk/client-s3": "^3.637.0",
     "@aws-sdk/lib-storage": "^3.616.0",
-    "@aws-sdk/s3-request-presigner": "^3.616.0",
-    "aws-sdk": "^2.1659.0",
+    "@aws-sdk/s3-request-presigner": "^3.637.0",
+    "aws-sdk": "^2.1683.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "chalk": "^5.3.0",
@@ -26,6 +26,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "libreoffice-convert": "^1.6.0",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.1",
     "multer": "^1.4.5-lts.1",
