fix:articletype attribute

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@aws-sdk/client-s3": "^3.637.0",
     "@aws-sdk/lib-storage": "^3.616.0",
     "@aws-sdk/s3-request-presigner": "^3.637.0",
+    "@ilovepdf/ilovepdf-nodejs": "^0.3.0",
     "aws-sdk": "^2.1683.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
@@ -24,7 +25,9 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
+    "express": "^4.21.0",
+    "fs-extra": "^11.2.0",
+    "ilovepdf-sdk": "^0.0.5",
     "jsonwebtoken": "^9.0.2",
     "libreoffice-convert": "^1.6.0",
     "mongodb": "^6.8.0",
